--- a/Dialogs/Dialogs.csproj
+++ b/Dialogs/Dialogs.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>1.1.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
