--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
+	<UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
     <Copyright>© 2022 pahipy</Copyright>
     <Company>pahipy</Company>
@@ -25,6 +26,7 @@
     <ProjectReference Include="..\Conf\Conf.csproj" />
     <ProjectReference Include="..\Dialogs\Dialogs.csproj" />
     <ProjectReference Include="..\Formats\Formats.csproj" />
+    <ProjectReference Include="..\WPFControls\WPFControls.csproj" />
   </ItemGroup>
 
   <ItemGroup>
