Charset autodetect support is added

--- a/Formats/Formats.csproj
+++ b/Formats/Formats.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
+    <PackageReference Include="UDE.CSharp" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
