--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -12,9 +12,9 @@
     <Version>1.3.1</Version>
     <ProductName>SText</ProductName>
     <AssemblyName>SText</AssemblyName>
-    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
-    <PublishSingleFile>true</PublishSingleFile>
+	<RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
     <Platforms>x64</Platforms>
+	<PublishReadyToRun>true</PublishReadyToRun>
     <ApplicationIcon>Media\STextIcon_Big.ico</ApplicationIcon>
   </PropertyGroup>
 
